--- a/adopsi.html
+++ b/adopsi.html
@@ -43,7 +43,7 @@
               <a href="adopsi.html">Adopsi</a>
             </li>
             <li>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
+              <a href="https://wa.me/62812345678910"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
             </li>
           </ul>
         </div>
@@ -167,9 +167,7 @@
                   <li class="lg:pe-20">Ramah, pendiam, senang rebahan</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
               <img src="public/img/adopsi-leo.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
@@ -190,9 +188,7 @@
                   <li>Aktif, energetik, jarang tidur, tidak suka ikan</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
               <img src="public/img/adopsi-mimi.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
@@ -213,9 +209,7 @@
                   <li>Tenang, clingy, mudah dipanggil, tidak suka gelap</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark">
               <img src="public/img/adopsi-tom.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
@@ -236,9 +230,7 @@
                   <li>Mageran, suka ngumpet, penakut sama orang baru</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
           </div>
           <div class="flex flex-col lg:flex-row justify-center items-center gap-8 py-10">
@@ -261,9 +253,7 @@
                   <li>Tidak bisa diam, clingy</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark invisible hidden lg:block">
               <img src="public/img/adopsi-leo.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
@@ -284,9 +274,7 @@
                   <li>Aktif, energetik, jarang tidur, tidak suka ikan</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark invisible hidden lg:block">
               <img src="public/img/adopsi-mimi.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
@@ -307,9 +295,7 @@
                   <li>Tenang, clingy, mudah dipanggil, tidak suka gelap</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
             <div class="flex flex-col w-full lg:w-3/12 h-[700px] p-3 rounded-[18px] bg-white text-dark invisible hidden lg:block">
               <img src="public/img/adopsi-tom.jpg" class="w-full h-[326px] object-cover object-center overflow-hidden rounded-[8px]" alt="" />
@@ -330,9 +316,7 @@
                   <li>Mageran, suka ngumpet, penakut sama orang baru</li>
                 </ul>
               </div>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"
-                ><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a
-              >
+              <a href="https://wa.me/62812345678910" class="bg-green hover:bg-lime-700 hover:transition hover:duration-300 duration-300 text-white text-2xl font-semibold p-6 rounded-full justify-center flex mt-[25px] items-center"><i class="bi bi-whatsapp px-3 text-3xl"></i>Adopsi</a>
             </div>
           </div>
           <!-- <div class="flex flex-col w-11/12 lg:w-[24%] h-[700px] p-3 rounded-[18px] bg-white text-dark">
@@ -366,19 +350,21 @@
                 <span class="text-4xl">Tidak menemukan kucing yang tepat untuk Anda?</span> <br />
                 Isi form di bawah ini, kami akan memberitahu Anda jika ada yang menitipkan kucing yang Anda inginkan.
               </p>
-              <div class="flex flex-col font-['Barlow'] gap-1">
-                <label for="name" class="font-bold text-xl">Nama</label>
-                <input type="text" placeholder="Tuliskan nama Anda" class="text-lg p-3 rounded-md" />
-              </div>
-              <div class="flex flex-col font-['Barlow'] gap-1">
-                <label for="name" class="font-bold text-xl">Email</label>
-                <input type="text" placeholder="Alamat Email Anda" class="text-lg p-3 rounded-md" />
-              </div>
-              <div class="flex flex-col font-['Barlow'] gap-1">
-                <label for="name" class="font-bold text-xl">Preferensi kucing yang diinginkan</label>
-                <textarea name="preference" cols="10" placeholder="Contoh: Persia, Betina, umur 3 tahun ke atas, putih polos" class="text-lg p-3 h-44 lg:h-40 rounded-md" id=""></textarea>
-              </div>
-              <a id="swapButton" class="bg-dark hover:bg-sky-950 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex">Submit</a>
+              <form class="space-y-12">
+                <div class="flex flex-col font-['Barlow'] gap-1">
+                  <label for="name" class="font-bold text-xl">Nama</label>
+                  <input type="text" required placeholder="Tuliskan nama Anda" class="text-lg p-3 rounded-md" />
+                </div>
+                <div class="flex flex-col font-['Barlow'] gap-1">
+                  <label for="name" class="font-bold text-xl">Email</label>
+                  <input type="text" required placeholder="Alamat Email Anda" class="text-lg p-3 rounded-md" />
+                </div>
+                <div class="flex flex-col font-['Barlow'] gap-1">
+                  <label for="name" class="font-bold text-xl">Preferensi kucing yang diinginkan</label>
+                  <textarea name="preference" cols="10" required placeholder="Contoh: Persia, Betina, umur 3 tahun ke atas, putih polos" class="text-lg p-3 h-44 lg:h-40 rounded-md" id=""></textarea>
+                </div>
+                <a id="swapButton" class="bg-dark hover:bg-sky-950 hover:transition hover:duration-300 duration-300 text-white text-2xl items-center font-semibold p-6 rounded-full justify-center flex cursor-pointer">Submit</a>
+              </form>
             </div>
             <div id="thanks" class="w-full text-3xl flex-1 flex-col flex gap-48 p-10 justify-start hidden">
               <p class="text-xl">
@@ -415,10 +401,10 @@
             </ul>
             <ul class="text-white flex flex-col gap-3 w-full md:w-56">
               <li class="text-Fuschia font-bold">Contact</li>
-              <a target="_blank" href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0">
+              <a target="_blank" href="https://wa.me/62812345678910">
                 <li>0812-3456-78910</li>
               </a>
-              <a target="_blank" href="https://mail.google.com/mail/u/0/#search/admin%40joycat.com">
+              <a target="_blank" href="mailto:admin@joycat.com">
                 <li>admin@joycat.com</li>
               </a>
               <a target="_blank" href="https://maps.app.goo.gl/d9ze4WH84M2zgJZc6">
@@ -456,17 +442,17 @@
       document.getElementById("swapButton").addEventListener("click", function () {
         const thanksDiv = document.getElementById("thanks");
         const fillDiv = document.getElementById("fill");
-
-        thanksDiv.classList.toggle("hidden");
-        fillDiv.classList.toggle("hidden");
+        if (document.querySelector("form").checkValidity()) {
+          thanksDiv.classList.toggle("hidden");
+          fillDiv.classList.toggle("hidden");
+        }
       });
-    </script>
-    <script>
       document.getElementById("hamburger").addEventListener("click", function () {
         const lines = this.querySelectorAll(".line");
         lines.forEach((line) => line.classList.toggle("transform-active"));
       });
     </script>
+
     <script src="script.js"></script>
   </body>
 </html>
