--- a/tentang.html
+++ b/tentang.html
@@ -43,7 +43,7 @@
               <a href="adopsi.html">Adopsi</a>
             </li>
             <li>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
+              <a href="https://wa.me/62812345678910"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
             </li>
           </ul>
         </div>
@@ -214,10 +214,10 @@
             </ul>
             <ul class="text-white flex flex-col gap-3 w-full md:w-56">
               <li class="text-Fuschia font-bold">Contact</li>
-              <a target="_blank" href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0">
+              <a target="_blank" href="https://wa.me/62812345678910">
                 <li>0812-3456-78910</li>
               </a>
-              <a target="_blank" href="https://mail.google.com/mail/u/0/#search/admin%40joycat.com">
+              <a target="_blank" href="mailto:admin@joycat.com">
                 <li>admin@joycat.com</li>
               </a>
               <a target="_blank" href="https://maps.app.goo.gl/d9ze4WH84M2zgJZc6">
