--- a/klinik.html
+++ b/klinik.html
@@ -43,7 +43,7 @@
               <a href="adopsi.html">Adopsi</a>
             </li>
             <li>
-              <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
+              <a href="https://wa.me/62812345678910"><i class="bi bi-whatsapp px-2 text-green"></i>0812-3456-78910</a>
             </li>
           </ul>
         </div>
@@ -206,7 +206,7 @@
             <div class="flex flex-col lg:flex-row w-full bg-teally rounded-2xl overflow-hidden text-white">
               <div class="w-full text-3xl flex-1 flex flex-col gap-10 p-10 justify-center">
                 <p>Cek antrian klinik dan lakukan reservasi melalui nomor berikut:</p>
-                <a href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0"
+                <a href="https://wa.me/62812345678910"
                   ><h2 class="font-semibold text-[26px] sm:text-[46px] md:text-[36px] lg:text-[36px] xl:text-[56px] flex items-center gap-2 hover:underline decoration-2 underline-offset-4"><i class="bi bi-whatsapp px-2 text-white"></i>0812-3456-78910</h2></a
                 >
               </div>
@@ -236,10 +236,10 @@
             </ul>
             <ul class="text-white flex flex-col gap-3 w-full md:w-56">
               <li class="text-Fuschia font-bold">Contact</li>
-              <a target="_blank" href="https://api.whatsapp.com/send/?phone=0812345678910&text&type=phone_number&app_absent=0">
+              <a target="_blank" href="https://wa.me/62812345678910">
                 <li>0812-3456-78910</li>
               </a>
-              <a target="_blank" href="https://mail.google.com/mail/u/0/#search/admin%40joycat.com">
+              <a target="_blank" href="mailto:admin@joycat.com">
                 <li>admin@joycat.com</li>
               </a>
               <a target="_blank" href="https://maps.app.goo.gl/d9ze4WH84M2zgJZc6">
